--- a/infra/k8s/posts-depl.yaml
+++ b/infra/k8s/posts-depl.yaml
@@ -16,3 +16,16 @@ spec:
         - name: posts
           image: mento/posts:0.0.2
           imagePullPolicy: IfNotPresent
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: posts-clusterip-srv
+spec:
+  selector:
+    app: posts
+  ports:
+    - name: posts
+      protocol: TCP
+      port: 4000
+      targetPort: 4000
