added minikube start command

--- a/infra/k8s/event-bus-depl.yaml
+++ b/infra/k8s/event-bus-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: event-bus
-          image: mento/event-bus
+          image: mento/event-bus:lastest
           imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
