--- a/infra/k8s/query-depl.yaml
+++ b/infra/k8s/query-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: query
-          image: cygnetops/query-84
+          image: mento/query:lastest
 ---
 apiVersion: v1
 kind: Service
