--- a/infra/k8s/comments-depl.yaml
+++ b/infra/k8s/comments-depl.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: comments
-          image: cygnetops/comments-84
+          image: mento/comments:lastest
+          imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
 kind: Service
