--- a/infra/k8s/moderation-depl.yaml
+++ b/infra/k8s/moderation-depl.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: moderation
-          image: cygnetops/moderation-84
+          image: mento/moderation:lastest
+          imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
 kind: Service
