--- a/infra/k8s/query-depl.yaml
+++ b/infra/k8s/query-depl.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
         - name: query
-          image: mento/query:lastest
+          image: localhost:5000/query:latest
+          imagePullPolicy: IfNotPresent
 ---
 apiVersion: v1
 kind: Service
